--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ h1 {
   background-image: url(https://images.pexels.com/photos/951882/pexels-photo-951882.jpeg);
   background-position: center;
   background-repeat: no-repeat;
-  height: 100px;
+  padding: 25px;
   text-align: center;
   text-align-last: center;
 }
