--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ h1 {
   text-align-last: center;
 }
 
-body {margin-top: 41.4px; margin-left: 0px}
+body {margin-top: 41.4px; margin: 0px}
 
 #nav {
   list-style-type: none;
@@ -32,7 +32,7 @@ body {margin-top: 41.4px; margin-left: 0px}
   position: fixed;
   top: 0;
   width: 100%;
-  bottom: 708px;
+  bottom: 707px;
 }
 
 li {
